--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -8,7 +8,7 @@
 
 <body>
     <!-- Back To Navigation -->
-    <a href="profile.html">Back</a>
+    <a href="home.html">Back</a>
 
     <!-- Header -->
     <h1>Tuiter</h1>
