--- a/public/tuiter/bookmarks.html
+++ b/public/tuiter/bookmarks.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <!-- Back To Navigation -->
-    <a href="profile.html">Back</a>
+    <a href="navigation.html">Back</a>
 
     <!-- Header -->
     <h1>Tuiter</h1>
