--- a/public/tuiter/notifications.html
+++ b/public/tuiter/notifications.html
@@ -7,7 +7,7 @@
 
 <body>
     <!-- Back To Navigation -->
-    <a href="profile.html">Back</a>
+    <a href="navigation.html">Back</a>
 
     <!-- Header -->
     <h1>Tuiter</h1>
