--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -130,6 +130,108 @@
             </div>
 
             <div class="wd-float-done"></div>
+
+            <!-- Second Content -->
+            <!-------------------------- Contents ----------------------------->
+            <div
+                class="wd-margin-top-12px wd-margin-left-16px wd-margin-right-12px">
+                <!--------- avatar --------->
+                <img
+                    class="wd-float-left wd-radius-circle wd-margin-right-12px wd-grid-col-side-bar"
+                    src="../pics/p2.jpg"
+                    alt="avatar"
+                    width="48px"
+                    height="48px" />
+                <!--------- Post Contents --------->
+                <div class="wd-float-left wd-grid-col-content">
+                    <!--------- Name and Handle --------->
+                    <div
+                        class="wd-fg-color-white wd-font-size-15px wd-bold wd-inline-element">
+                        Ryan Reynolds
+                    </div>
+                    <div
+                        class="wd-posts-handle wd-font-size-15px wd-padding-left-5px wd-inline-element">
+                        @VancityReynolds &middot; May 31
+                    </div>
+                    <!--------- Main Text --------->
+                    <div
+                        class="wd-limit-content-width wd-font-size-15px wd-fg-color-white wd-margin-top-3px">
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the industry's
+                        standard dummy text ever since the 1500s, when an unknown
+                        printer took a galley of type and scrambled it to make a
+                        type specimen book. It has survived not only five centuries,
+                        but also the leap into electronic typesetting, remaining
+                        essentially unchanged. It was popularised in the 1960s with
+                        the release of Letraset sheets containing Lorem Ipsum
+                        passages, and more recently with desktop publishing software
+                        like Aldus PageMaker including versions of Lorem Ipsum.
+                    </div>
+                    <div class="wd-element-border wd-border-rounded wd-margin-top-12px">
+                        <!-- Image -->
+                        <img
+                            class="wd-image-large"
+                            src="../pics/a3-post-game.png"
+                            alt="post related image" />
+                        <!-- Explanation -->
+                        <div
+                            class="wd-padding-all-around-12px wd-font-size-15px wd-limit-content-width">
+                            <div class="wd-bold wd-fg-color-white">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing
+                                elit...
+                            </div>
+                            <div class="wd-fg-color-light-grey wd-margin-top-3px">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing
+                                elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua.
+                            </div>
+                            <div>
+                                <a href="#" class="wd-posts-handle">🔗 rt.com</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 4 icons -->
+                    <div class="wd-margin-top-12px">
+                        <!-- comment -->
+                        <div
+                            class="wd-posts-handle wd-grid-col-icon wd-padding-bottom-10px">
+                            <a href="#" class="wd-posts-handle">
+                                <i class="far fa-comment wd-margin-right-12px"></i>
+                                <div class="wd-inline-element">242</div>
+                            </a>
+                        </div>
+                        <div
+                            class="wd-posts-handle wd-grid-col-icon wd-padding-bottom-10px">
+                            <a href="#" class="wd-posts-handle">
+                                <i class="fa fa-retweet wd-margin-right-12px"></i>
+                                <div class="wd-inline-element">90</div>
+                            </a>
+                        </div>
+                        <div
+                            class="wd-posts-handle wd-grid-col-icon wd-padding-bottom-10px">
+                            <a href="#" class="wd-heart-color">
+                                <i class="fa fa-heart wd-margin-right-12px"></i>
+                                <div class="wd-inline-element">78</div>
+                            </a>
+                        </div>
+                        <div
+                            class="wd-posts-handle wd-grid-col-icon wd-padding-bottom-10px">
+                            <a href="#" class="wd-posts-handle">
+                                <i class="fas fa-upload"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!--------- more info --------->
+                <div class="wd-float-right wd-inline-element">
+                    <a
+                        href="#"
+                        class="wd-fg-color-white wd-margin-right-3px wd-bold">
+                        &middot;&middot;&middot;
+                    </a>
+                </div>
+
+                <div class="wd-float-done"></div>
         </div>
     </body>
 </html>
