--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -35,7 +35,7 @@
                 <a href="explore-settings.html">
                     <img
                         id="wd-settings-icon"
-                        src="../pics/s3-settings.jpg"
+                        src="../pics/a3-settings.jpg"
                         alt="settings icon"
                         width="25px"
                         height="25px" />
@@ -143,7 +143,24 @@
             </div>
             <div class="wd-float-done"></div>
         </div>
-
+        <!-- Field 3 -->
+        <div class="wd-padding-all-around-16px wd-posts-separator">
+            <!--------- Tags and Titles --------->
+            <div class="wd-grid-column-main">
+                <div class="wd-posts-handle">News &middot; LIVE</div>
+                <div class="wd-posts-titles wd-margin-top-3px">
+                    Turkey, Syria earthquake kills thousands
+                </div>
+            </div>
+            <!--------- image --------->
+            <div class="wd-grid-column-image">
+                <img
+                    class="wd-rounded-imgs"
+                    src="../pics/a3-posts-earthquake.png"
+                    alt="earthquake image" />
+            </div>
+            <div class="wd-float-done"></div>
+        </div>
         <!-- Field 4 -->
         <div class="wd-padding-all-around-16px wd-posts-separator">
             <!--------- Tags and Titles --------->
