--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -211,7 +211,7 @@
                             class="wd-posts-handle wd-grid-col-icon wd-padding-bottom-10px">
                             <a href="#" class="wd-heart-color">
                                 <i class="fa fa-heart wd-margin-right-12px"></i>
-                                <div class="wd-inline-element">78</div>
+                                <div class="wd-inline-element">7</div>
                             </a>
                         </div>
                         <div
@@ -232,6 +232,7 @@
                 </div>
 
                 <div class="wd-float-done"></div>
+        </div>
         </div>
     </body>
 </html>
