--- a/public/tuiter/old-version/index.html
+++ b/public/tuiter/old-version/index.html
@@ -32,7 +32,7 @@
             </div>
             <!-- explore settings gear  -->
             <div class="wd-float-right">
-                <a href="explore-settings.html">
+                <a href="../explore/explore-settings.html">
                     <img
                         id="wd-settings-icon"
                         src="../pics/a3-settings.jpg"
