--- a/public/labs/a4/index.html
+++ b/public/labs/a4/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../../vendors/css/bootstrap.min.css" />
         <link href="index.css" rel="stylesheet" />
         <!-- icons -->
-        <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet" />
+        <link href="../../vendors/fontawesome/css/all.min.css" rel="stylesheet" />
         <!-- alternative in cdns -->
         <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
       rel="stylesheet"/> -->
