--- a/public/tuiter/old-version/a4-explore/explore/index.html
+++ b/public/tuiter/old-version/a4-explore/explore/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="../../vendors/css/bootstrap.min.css" />
         <!-- Link to BootStrap -->
-        <link rel="stylesheet" href="../../vendors/bootswatch/bootstrap.min.css" />
-        <!-- link to BootsWatch -->
-        <link rel="stylesheet" href="index.css" />
+        <!-- <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+            crossorigin="anonymous" /> -->
+        <link rel="stylesheet" href="../../vendors/css/bootstrap.min.css" />
+        <!-- link to icons -->
         <!-- <link rel="stylesheet" href="../../vendors/fontawesome/css/all.css" /> -->
         <script src="https://kit.fontawesome.com/f13717ae26.js" crossorigin="anonymous"></script>
-        <!-- jQuery -->
-        <script
-            src="https://code.jquery.com/jquery-3.6.1.min.js"
-            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-            crossorigin="anonymous"></script>
-        <!-- Icons -->
+        <link rel="stylesheet" href="index.css" />
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Explore Screen</title>
+        <title>Document</title>
     </head>
     <body>
         <div class="container mt-2 mb-4">
