--- a/public/tuiter/Old-Versions/a4-explore&challenges/explore-challenges/index.html
+++ b/public/tuiter/Old-Versions/a4-explore&challenges/explore-challenges/index.html
@@ -7,7 +7,7 @@
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             crossorigin="anonymous" /> -->
-        <link rel="stylesheet" href="../../vendors/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="../../../../vendors/css/bootstrap.min.css" />
         <!-- link to icons -->
         <!-- <link rel="stylesheet" href="../../vendors/fontawesome/css/all.css" /> -->
         <script src="https://kit.fontawesome.com/f13717ae26.js" crossorigin="anonymous"></script>
