a5 html 2023 spring - 4.2 Navbar Refactor

--- a/public/tuiter/Old-Versions/a3/index.html
+++ b/public/tuiter/Old-Versions/a3/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Explore</title>
         <link rel="stylesheet" href="index.css" />
-        <link rel="stylesheet" href="../styles.css" />
+        <link rel="stylesheet" href="../../styles.css" />
     </head>
 
     <body>
@@ -12,22 +12,14 @@
         <div class="wd-margin-top-15px wd-margin-left-16px">
             <!-- search icon -->
             <div class="wd-float-left">
-                <img
-                    id="wd-search-icon"
-                    src="../pics/search.jpg"
-                    alt="search icon" />
+                <img id="wd-search-icon" src="../pics/search.jpg" alt="search icon" />
             </div>
             <!-- search input -->
             <div class="wd-float-left">
                 <!-- use google as search result first -->
                 <form action="https://www.google.com/search">
                     <label for="search-field"></label>
-                    <input
-                        id="wd-search-input"
-                        type="search"
-                        name="q"
-                        id="search-field"
-                        placeholder="Search Twitter" />
+                    <input id="wd-search-input" type="search" name="q" id="search-field" placeholder="Search Twitter" />
                 </form>
             </div>
             <!-- explore settings gear  -->
@@ -81,14 +73,10 @@
             <div>
                 <!-- Line 1  -->
                 <!--------- tags --------->
-                <div class="wd-posts-handle wd-float-left">
-                    Trending in Science
-                </div>
+                <div class="wd-posts-handle wd-float-left">Trending in Science</div>
                 <div>
                     <!--------- more info --------->
-                    <a
-                        href=""
-                        class="wd-fg-color-white wd-margin-right-15px wd-bold wd-float-right">
+                    <a href="" class="wd-fg-color-white wd-margin-right-15px wd-bold wd-float-right">
                         &middot;&middot;&middot;
                     </a>
                 </div>
@@ -96,9 +84,7 @@
                 <br />
                 <div class="wd-posts-titles wd-margin-top-3px">Starship</div>
                 <!-- Line 3 -->
-                <div class="wd-posts-handle wd-margin-top-3px">
-                    55.5k Tweets
-                </div>
+                <div class="wd-posts-handle wd-margin-top-3px">55.5k Tweets</div>
             </div>
         </div>
 
@@ -110,17 +96,11 @@
                 <!--------- Titles --------->
                 <div class="wd-posts-titles wd-margin-top-3px">Joe Rogan</div>
                 <!--------- Tweets Number --------->
-                <div class="wd-posts-handle wd-margin-top-3px">
-                    5,218 Tweets
-                </div>
+                <div class="wd-posts-handle wd-margin-top-3px">5,218 Tweets</div>
             </div>
             <div class="wd-float-right">
                 <!--------- More Info --------->
-                <a
-                    href=""
-                    class="wd-fg-color-white wd-margin-right-15px wd-bold">
-                    &middot;&middot;&middot;
-                </a>
+                <a href="" class="wd-fg-color-white wd-margin-right-15px wd-bold">&middot;&middot;&middot;</a>
             </div>
             <div class="wd-float-done"></div>
         </div>
@@ -130,16 +110,11 @@
             <!--------- Tags and Titles --------->
             <div class="wd-grid-column-main">
                 <div class="wd-posts-handle">COVID-19 &middot; LIVE</div>
-                <div class="wd-posts-titles wd-margin-top-3px">
-                    COVID-19: News and updates for Massachusetts
-                </div>
+                <div class="wd-posts-titles wd-margin-top-3px">COVID-19: News and updates for Massachusetts</div>
             </div>
             <!--------- image --------->
             <div class="wd-grid-column-image">
-                <img
-                    class="wd-rounded-imgs"
-                    src="../pics/a3-posts-MA.jpg"
-                    alt="covid-19 image" />
+                <img class="wd-rounded-imgs" src="../pics/a3-posts-MA.jpg" alt="covid-19 image" />
             </div>
             <div class="wd-float-done"></div>
         </div>
@@ -148,16 +123,11 @@
             <!--------- Tags and Titles --------->
             <div class="wd-grid-column-main">
                 <div class="wd-posts-handle">News &middot; LIVE</div>
-                <div class="wd-posts-titles wd-margin-top-3px">
-                    Turkey, Syria earthquake kills thousands
-                </div>
+                <div class="wd-posts-titles wd-margin-top-3px">Turkey, Syria earthquake kills thousands</div>
             </div>
             <!--------- image --------->
             <div class="wd-grid-column-image">
-                <img
-                    class="wd-rounded-imgs"
-                    src="../pics/a3-posts-earthquake.png"
-                    alt="earthquake image" />
+                <img class="wd-rounded-imgs" src="../pics/a3-posts-earthquake.png" alt="earthquake image" />
             </div>
             <div class="wd-float-done"></div>
         </div>
@@ -166,28 +136,18 @@
             <!--------- Tags and Titles --------->
             <div class="wd-grid-column-main">
                 <div>
-                    <img
-                        class="wd-rounded-icon"
-                        src="../pics/a3-new-york-times-logo.jpg"
-                        alt="New York Times Logo" />
+                    <img class="wd-rounded-icon" src="../pics/a3-new-york-times-logo.jpg" alt="New York Times Logo" />
                     <span class="wd-posts-handle">The New York Times</span>
-                    <img
-                        class="wd-rounded-icon"
-                        src="../pics/a3-verified-account.png"
-                        alt="verified Logo" />
+                    <img class="wd-rounded-icon" src="../pics/a3-verified-account.png" alt="verified Logo" />
                     <span class="wd-posts-handle">&middot;Yesterday</span>
                 </div>
                 <div class="wd-posts-titles wd-margin-top-3px">
-                    CNN's Cuomo conundrum: A star anchor with a brother in
-                    trouble
+                    CNN's Cuomo conundrum: A star anchor with a brother in trouble
                 </div>
             </div>
             <!--------- image --------->
             <div class="wd-grid-column-image">
-                <img
-                    class="wd-rounded-imgs"
-                    src="../pics/a3-posts-news.jpg"
-                    alt="covid-19 image" />
+                <img class="wd-rounded-imgs" src="../pics/a3-posts-news.jpg" alt="covid-19 image" />
             </div>
             <div class="wd-float-done"></div>
         </div>
@@ -197,27 +157,16 @@
             <!-- Tags and Titles -->
             <div class="wd-grid-column-main">
                 <div>
-                    <img
-                        class="wd-rounded-icon"
-                        src="../pics/a3-bloomberg.jpg"
-                        alt="New York Times Logo" />
+                    <img class="wd-rounded-icon" src="../pics/a3-bloomberg.jpg" alt="New York Times Logo" />
                     <span class="wd-posts-handle">Bloomberg Opinion</span>
-                    <img
-                        class="wd-rounded-icon"
-                        src="../pics/a3-verified-account.png"
-                        alt="verified Logo" />
+                    <img class="wd-rounded-icon" src="../pics/a3-verified-account.png" alt="verified Logo" />
                     <span class="wd-posts-handle">&middot;Yesterday</span>
                 </div>
-                <div class="wd-posts-titles wd-margin-top-3px">
-                    Thinking about getting a booster? Read this first.
-                </div>
+                <div class="wd-posts-titles wd-margin-top-3px">Thinking about getting a booster? Read this first.</div>
             </div>
             <!-- image -->
             <div class="wd-grid-column-image">
-                <img
-                    class="wd-rounded-imgs"
-                    src="../pics/a3-news-covid.jpg"
-                    alt="covid-19 image" />
+                <img class="wd-rounded-imgs" src="../pics/a3-news-covid.jpg" alt="covid-19 image" />
             </div>
             <div class="wd-float-done"></div>
         </div>
