--- a/public/tuiter/messages.html
+++ b/public/tuiter/messages.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Messages</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Messages</title>
+        <script
+            src="https://code.jquery.com/jquery-3.6.1.min.js"
+            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+            crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <!-- Back To Navigation -->
+        <a href="navigation.html">Back</a>
 
-    <!-- Back To Navigation -->
-    <a href="navigation.html">Back</a>
-
-    <!-- Header -->
-    <h1>Tuiter</h1>
-    <h2>Messages</h2>
-
-</body>
-</body>
+        <!-- Header -->
+        <h1>Tuiter</h1>
+        <h2>Messages</h2>
+    </body>
 </html>
