--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <title>Navigation</title>
+        <link rel="stylesheet" href="../vendors/bootswatch/bootstrap.min.css" />
+        <link rel="stylesheet" href="../vendors/css/bootstrap.min.css" />
     </head>
 
     <body>
-        <ul>
+        <ul class="ms-5 mt-5">
             <li><a href="home.html">Home</a></li>
-            <li><a href="explore/index.html">Explore</a></li>
-            <li><a href="explore-challenges/index.html">Explore Challenges</a></li>
+            <li><a href="explore/index.html">A5 - Tuiter - Explore Screen</a></li>
+            <li><a href="explore-challenges/index.html">A5 - Challenge 4.1 HomeScreen</a></li>
+            <li><a href="explore-challenges/index.html">A5 - Challenge 4.2 Refactored Nav Bar</a></li>
             <li><a href="notifications.html">Notifications</a></li>
             <li><a href="messages.html">Messages</a></li>
             <li><a href="bookmarks/index.html">Bookmarks</a></li>
