--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="vendors/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="index.css" />
+
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,13 +20,22 @@
     <body>
         <div class="container">
             <h1>Web Dev Assignments</h1>
-            <ul>
-                <li><a href="labs/a2/index.html">Assignment 2 Lab</a></li>
-                <li><a href="labs/a3/index.html">Assignment 3 Lab</a></li>
-                <li><a href="labs/a4/index.html">Assignment 4 Lab</a></li>
-                <li><a href="labs/a5/index.html">Assignment 5 Lab</a></li>
-                <li><a href="labs/a5/todos/index.html">Assignment 5 Lab -- todos</a></li>
-                <li><a href="tuiter/navigation.html">Tuiter</a></li>
+            <ul class="list-group w-25">
+                <li class="list-group-item"><a href="labs/a2/index.html" class="text-muted">A2 Lab</a></li>
+                <li class="list-group-item"><a href="labs/a3/index.html" class="text-muted">A3 Lab</a></li>
+                <li class="list-group-item"><a href="labs/a4/index.html" class="text-muted">A4 Lab</a></li>
+                <li class="list-group-item"><a href="tuiter/navigation.html" class="text-muted">Tuiter - A4</a></li>
+                <li class="list-group-item fw-bold te"><a href="labs/a5/index.html">A5 Lab (2.1-2.23)</a></li>
+                <li class="list-group-item fw-bold"><a href="labs/a5/todos/index.html">A5 Lab: TODO List (2.24)</a></li>
+                <li class="list-group-item fw-bold">
+                    <a href="tuiter/ExploreScreen/index.html">A5 Tuiter: ExploreScreen (3.1-3.9)</a>
+                </li>
+                <li class="list-group-item fw-bold">
+                    <a href="tuiter/HomeScreen/index.html">A5 Tuiter: HomeScreen(4.1)</a>
+                </li>
+                <li class="list-group-item fw-bold">
+                    <a href="tuiter/navigation.html">A5 Tuiter: 4.2 Refactor NavBar</a>
+                </li>
             </ul>
         </div>
     </body>
