--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -8,18 +8,20 @@
     </head>
 
     <body>
-        <ul class="ms-5 mt-5">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="explore/index.html">A5 - Tuiter - Explore Screen</a></li>
-            <li><a href="explore-challenges/index.html">A5 - Challenge 4.1 HomeScreen</a></li>
-            <li><a href="explore-challenges/index.html">A5 - Challenge 4.2 Refactored Nav Bar</a></li>
-            <li><a href="notifications.html">Notifications</a></li>
-            <li><a href="messages.html">Messages</a></li>
-            <li><a href="bookmarks/index.html">Bookmarks</a></li>
-            <li><a href="lists.html">Lists</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li><a href="tuit.html">Tuit</a></li>
-            <li><a href="reply.html">Reply</a></li>
+        <ul class="ms-5 mt-5 list-group w-25">
+            <li class="list-group-item">
+                <a href="HomeScreen/index.html" class="text-decoration-none">Home (A5 updated)</a>
+            </li>
+            <li class="list-group-item">
+                <a href="ExploreScreen/index.html" class="text-decoration-none">Explore (A5 updated)</a>
+            </li>
+            <li class="list-group-item"><a href="notifications.html" class="text-decoration-none">Notifications</a></li>
+            <li class="list-group-item"><a href="messages.html" class="text-decoration-none">Messages</a></li>
+            <li class="list-group-item"><a href="bookmarks/index.html" class="text-decoration-none">Bookmarks</a></li>
+            <li class="list-group-item"><a href="lists.html" class="text-decoration-none">Lists</a></li>
+            <li class="list-group-item"><a href="profile.html" class="text-decoration-none">Profile</a></li>
+            <li class="list-group-item"><a href="tuit.html" class="text-decoration-none">Tuit</a></li>
+            <li class="list-group-item"><a href="reply.html" class="text-decoration-none">Reply</a></li>
         </ul>
     </body>
 </html>
