a5 html 2023 spring - details fixed

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
                     <a href="tuiter/ExploreScreen/index.html">A5 Tuiter: ExploreScreen (3.1-3.9)</a>
                 </li>
                 <li class="list-group-item fw-bold">
-                    <a href="tuiter/HomeScreen/index.html">A5 Tuiter: HomeScreen(4.1)</a>
+                    <a href="tuiter/HomeScreen/index.html">A5 Tuiter: HomeScreen (4.1)</a>
                 </li>
                 <li class="list-group-item fw-bold">
-                    <a href="tuiter/navigation.html">A5 Tuiter: 4.2 Refactor NavBar</a>
+                    <a href="tuiter/ExploreScreen/index.html">A5 Tuiter: Refactor NavBar (4.2)</a>
                 </li>
             </ul>
         </div>
