--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <title>React App</title>
     </head>
     <body>
-        <div class="container">
+        <!-- <div class="container">
             <h1>Web Dev Assignments</h1>
             <ul class="list-group w-25">
                 <li class="list-group-item"><a href="labs/a2/index.html" class="text-muted">A2 Lab</a></li>
@@ -37,6 +37,7 @@
                     <a href="tuiter/ExploreScreen/index.html">A5 Tuiter: Refactor NavBar (4.2)</a>
                 </li>
             </ul>
-        </div>
+        </div> -->
+        <div id="root"></div>
     </body>
 </html>
